...
    }
    
    func getPaymentToken(){
        let completion = { [unowned self] (paymentToken: String?,error: String?) in
            guard let token = paymentToken else {
               KRProgressHUD.dismiss()
                self.alert(title: "Error", message: "Invalid Payment Token")
                return
            }
            self.showDropIn(token)
        }
        ApiManager.getPaymentToken(completion: completion)
    }
...
